Fixed spacing on event times

--- a/daily_dashboard/static/styles/dashboard.css
+++ b/daily_dashboard/static/styles/dashboard.css
@@ -127,7 +127,8 @@ body {
 }
 
 #primary .event .time {
-  min-width: 125px;
+  min-width: 135px;
+
 }
 
 /* SECONDARY */
@@ -154,7 +155,7 @@ body {
 }
 
 #secondary .event .time {
-  min-width: 90px;
+  min-width: 80px;
 }
 
 #secondary .event .time * {
@@ -203,13 +204,12 @@ body {
 
 .event .time {
   text-align: right;
-  padding-right: 0.25em;
+  padding-right: 0.5em;
+  margin-right: 0.5em;
   border-right: 0.15em solid var(--primary-color);
 }
 
 .event .summary {
   font-size: 1.2em;
   font-weight: bold;
-
-  margin-left: 0.5em;
 }
